<resources>
    <string name="app_name">UserProfileShopping</string>
    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_cart">My Cart</string>

    <string name="slide_1_title">Salon At Home Service</string>
    <string name="slide_1_desc">The easiest way to call salon at home
    </string>

    <string name="slide_2_title">Full Packanges</string>
    <string name="slide_2_desc">Book Full Packages with best offers</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">Shop EveryThing For Girls</string>
    <string name="slide_4_desc">The easiest way to shopping </string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_cart">My_cart</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="spinner_title">Qty</string>

    <string name="name_error">please enter name</string>
    <string name="password_error">enter password</string>
    <string name="please_fill_all_required_field">please fill all require field</string>
    <string name="enter_email">enter email</string>
    <string name="enter_valid_email">enter valid email</string>
    <string name="Phone_error">enter phone number</string>
    <string name="Phone_length_validation">enter valid number</string>

    <string name="access_code">Access Code</string>
    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="incorrect_Password">Incorrect Password</string>
</resources>
